# open-electrical

./: .gitignore  CMakeLists.txt  HANDOFF.md  README.md  descs.md  instalar.sh
blocos/: eletrica_blocos.dxf
cmake/: FindBRX.cmake
docs/: calculo.html  el-wire.html  elementos.html  fundamentos.html  index.html  interface.html  nav.js  primeiro-projeto.html  relatorios.html  roteamento.html  style.css  troubleshooting.html  wrangler.jsonc
docs-legacy/: ARCHITECTURE.md  BRICSCAD-BRX-LINUX.md  HANDOFF.md  RELATORIO-CORRECOES.md
lisp/: eletrica.lsp  eletrica_dim.lsp  eletrica_panel.dcl
python/: criar_blocos.py  dimensionar.py  gerar_bom.py
resources/lang/: en.json  es.json  pt-BR.json
resources/symbols/: README.md
scripts/: build-wxstatic.sh  debug-load.sh  setup.ps1  setup.sh
src/: BricsCADElectrical.def  Platform.h  exports.map  main.cpp  open-electrical.def
src/commands/: CircuitCommands.cpp  CommandUtil.cpp  CommandUtil.h  Commands.cpp  Commands.h  ConfigCommands.cpp  DeleteCommands.cpp  ElementCommands.cpp  ReportCommands.cpp  RoomCommands.cpp
src/models/: Circuit.cpp  Circuit.h  Conduit.cpp  Conduit.h  ElectricalElement.cpp  ElectricalElement.h  LightPoint.cpp  LightPoint.h  Outlet.cpp  Outlet.h  Panel.cpp  Panel.h  ProjectData.cpp  ProjectData.h  ProjectSettings.cpp  ProjectSettings.h  Room.cpp  Room.h  Serialization.h  Switch.cpp  Switch.h  Types.h
src/services/: CircuitDistributor.cpp  CircuitDistributor.h  DatabaseService.cpp  DatabaseService.h  LightingCalculator.cpp  LightingCalculator.h  ProjectContext.cpp  ProjectContext.h  ReportGenerator.cpp  ReportGenerator.h  Router.cpp  Router.h  SymbolFactory.cpp  SymbolFactory.h  WireCounts.h
src/ui/: ConfigDialog.cpp  ConfigDialog.h  ElementDialogs.cpp  Localization.cpp  Localization.h  MainPalette.cpp  MainPalette.h  PaletteHost.cpp  PaletteHost.h  RoomDialog.cpp  RoomDialog.h  UiBridge.cpp  UiBridge.h
src/ui/dcl/: electrical.dcl
src/utilities/: Diag.h  ElementOutline.cpp  ElementOutline.h  GeometryHelper.cpp  GeometryHelper.h  PolyMath.cpp  PolyMath.h  StringUtil.cpp  StringUtil.h  TransactionHelper.cpp  TransactionHelper.h
tests/: test_framework.h  tests.cpp
